--- a/package.json
+++ b/package.json
@@ -5,18 +5,21 @@
   "main": "app.js",
   "type": "module",
   "scripts": {
-    "dev": "tsx watch ./app.ts"
+    "dev": "tsx watch ./src/app.ts"
   },
   "keywords": [],
   "author": "dischanell",
   "license": "ISC",
   "dependencies": {
-    "@types/express": "5.0.0",
     "cors": "2.8.5",
     "dotenv": "16.4.5",
     "express": "4.18.2",
     "mongodb": "5.7.0",
+    "mongoose": "8.7.0",
     "tsx": "4.19.1",
     "zod": "3.21.4"
+  },
+  "devDependencies": {
+    "@types/express": "5.0.0"
   }
 }
