--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "dischanell",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "5.1.1",
     "cors": "2.8.5",
     "dotenv": "16.4.5",
     "express": "4.18.2",
@@ -20,6 +21,7 @@
     "zod": "3.21.4"
   },
   "devDependencies": {
+    "@types/bcrypt": "5.0.2",
     "@types/express": "5.0.0"
   }
 }
