--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "5.1.1",
+    "cookie-parser": "1.4.7",
     "cors": "2.8.5",
     "dotenv": "16.4.5",
     "express": "4.18.2",
     "mongodb": "5.7.0",
     "mongoose": "8.7.0",
+    "nanoid": "5.0.7",
     "tsx": "4.19.1",
     "zod": "3.21.4"
   },
